@@ -2,6 +2,13 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2024-01-11:
+
+- Fixed ancient incorrect behaviour in the 'kill' built-in: it sent SIGCONT
+  to the given process along with every other non-SIGCONT signal issued,
+  causing a stopped process to be incorrectly resumed upon sending it any
+  signal and causing any SIGCONT trap handler to be incorrectly triggered.
+
 2024-01-05:
 
 - Fixed a potential crash on pressing Ctrl+C on the command line while
